<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_bottom_goods"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_img_bottom_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_goods"/>

        <TextView
            android:id="@+id/tv_bottom_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="货品"
            android:textSize="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_bottom_news"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_img_bottom_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_news"/>

        <TextView
            android:id="@+id/tv_bottom_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="新闻"
            android:textSize="10dp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_bottom_com"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/img_bottom_com"
            android:src="@mipmap/img_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_bottom_account"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_img_bottom_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_account"/>

        <TextView
            android:id="@+id/tv_bottom_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="账户"
            android:textSize="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/layout_bottom_me"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_img_bottom_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_me"/>

        <TextView
            android:id="@+id/tv_bottom_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="我的"
            android:textSize="10dp"/>

    </LinearLayout>





</LinearLayout>