<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent" android:layout_height="100dp"
    android:background="@color/white"
    android:layout_marginBottom="5dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_border"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48.5dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_img_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:textColor="@color/black_normal"
            android:text="@string/icon_address"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/black_dark"
            android:gravity="center_vertical"
            android:text="宁波市"/>

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_border"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true">

            <TextView
                android:id="@+id/tv_img_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:layout_marginRight="10dp"
                android:textSize="20sp"
                android:textColor="@color/black_normal"
                android:text="@string/icon_receiver"/>

            <TextView
                android:id="@+id/tv_address_receiver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_dark"
                android:textSize="16sp"
                android:text="mao"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_edit"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/layout_del">

            <TextView
                android:id="@+id/tv_img_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/black_dark"
                android:text="@string/icon_edit"/>

            <TextView
                android:id="@+id/tv_address_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_dark"

                android:text="编辑"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_del"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/tv_img_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:textColor="@color/black_dark"
                android:text="@string/icon_del"/>

            <TextView
                android:id="@+id/tv_address_del"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_dark"
                android:text="删除"/>

        </LinearLayout>



    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_border"/>

</LinearLayout>